# ML_projects-applied_knowledge

./: .gitignore  pyproject.toml  requirements.txt
Classical_ML/Classification/Credit_card_default_prediction/: Interview_questions.md  README.md  app.py  credit_default_classification.ipynb
Classical_ML/Regression/Energy_Regression/: Interview_questions.md  reg_learning_mistake.ipynb
Classical_ML/Regression/Fifa_Regression/: README.md
Classical_ML/Regression/Retail_Price_Optimizaion/: README.md  optimization.ipynb
Deep_learning/NLP/: text_preprocessing.ipynb
Recommender_systems/Beginner_project/Part_1/: retail_recommendation_rule_based.ipynb
Regression/Energy_Regression/: regression.ipynb
Regression/Fifa_Regression/: multiple_regression.ipynb
Regression/Retail_Price_Optimizaion/: optimization.ipynb
