[project]
name = "ml-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bayesian-optimization>=2.0.3",
    "category-encoders>=2.8.1",
    "graphviz>=0.20.3",
    "imbalanced-learn>=0.13.0",
    "ipywidgets>=8.1.6",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.0",
    "mlflow>=2.21.3",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.1",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.0",
    "ydata-profiling>=4.16.1",
]
